tree-sitter/test/corpus/item.txt
======
Import
======

import { foo, bar, baz };

---

(source_file
    (import_item
        (identifier)
        (identifier)
        (identifier)))

======
Export
======

export { foo, bar, baz };

---

(source_file
    (export_item
        (identifier)
        (identifier)
        (identifier)))


======
Struct
======

struct Chair<M: Material>(
    Color,
    design: Design,
    material: M,
);

---

(source_file
    (struct_item
        name: (identifier)
        generics: (generic_parameter_list
            (generic_parameter
                name: (identifier)
                bounds: (identifier)))
        parameters: (struct_parameter_list
            (struct_parameter
                type: (identifier))
            (struct_parameter
                name: (identifier)
                type: (identifier))
            (struct_parameter
                name: (identifier)
                type: (identifier)))))

=====
Union
=====

union Address {
    Kind1(first: I32, second: I32),
    Kind2(String),
    Kind3,
};

---

(source_file
    (union_item
        name: (identifier)
        variants: (union_variant_list
            (union_variant
                name: (identifier)
                parameters: (struct_parameter_list
                    (struct_parameter
                        name: (identifier)
                        type: (identifier))
                    (struct_parameter
                        name: (identifier)
                        type: (identifier))))
            (union_variant
                name: (identifier)
                parameters: (struct_parameter_list
                        (struct_parameter
                            type: (identifier))))
            (union_variant
                name: (identifier)))))

=============
Simple Module
=============

module foo {
    func bar() {};
};

---

(source_file
    (module_item
        name: (identifier)
        (function_item
            name: (identifier)
            parameters: (func_parameter_list)
            body: (block))))

==============
Complex Module
==============

module foo<Self> -> Foo {
    func bar() -> Self {};
};

---

(source_file
    (module_item
        name: (identifier)
        generics: (generic_parameter_list
            (generic_parameter
                name: (identifier)))
        return_type: (identifier)
        (function_item
            name: (identifier)
            parameters: (func_parameter_list)
            return_type: (identifier)
            body: (block))))
